# claude-tools

./: .gitignore  README.md  pyproject.toml
src/ccm/: __init__.py  __main__.py  async_source.py  builder.py  cli.py  config.py  constants.py  incremental.py  indexer.py  interfaces.py  profile_config.py  project.py  source.py  tui.py  updater.py  version.py
src/ccm/profiles/: base.json  coding-python.json  coding.json
tests/: conftest.py  test_config.py  test_indexer.py  test_profile_builder.py  test_project.py  test_version.py
