[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccm"
version = "0.2.0"
description = "Claude Code Manager - Profile and source management for Claude Code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Claude Code User"}
]
keywords = ["claude", "claude-code", "ai", "productivity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "GitPython>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
ccm = "ccm.cli:main"

[project.urls]
Homepage = "https://github.com/wangli-td/ccm"
Repository = "https://github.com/wangli-td/ccm"

[tool.hatch.build.targets.wheel]
packages = ["src/ccm"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
